<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLayoutItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/layout_16dp"
    android:layout_marginStart="@dimen/layout_8dp"
    android:layout_marginEnd="@dimen/layout_8dp"
    android:layout_marginBottom="@dimen/layout_5dp"
    app:cardCornerRadius="@dimen/layout_8dp"
    app:cardElevation="@dimen/layout_8dp"
    android:backgroundTint="@color/grey">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/companyItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_500"
            android:paddingStart="@dimen/layout_24dp"
            android:paddingTop="@dimen/layout_8dp"
            android:paddingEnd="@dimen/layout_24dp"
            android:paddingBottom="@dimen/layout_8dp"
            android:text="@string/company"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/grey"
            android:textSize="@dimen/size_title_card_item"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/idItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/layout_8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_500"
            android:textSize="@dimen/size_text_card"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyItem" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_500"
            android:textSize="@dimen/size_text_card"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idItem" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/layout_8dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/primary_500"
            android:text="@string/email"
            android:textSize="@dimen/size_text_card"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameItem" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phoneItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/layout_8dp"
            android:layout_marginEnd="@dimen/layout_16dp"
            android:layout_marginBottom="@dimen/layout_16dp"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_500"
            android:textSize="@dimen/size_text_card"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageShare"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailItem" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageShare"
            android:layout_width="@dimen/image_icon_layout"
            android:layout_height="@dimen/image_icon_layout"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_share_image"
            android:src="@drawable/ic_share"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/phoneItem"
            app:layout_constraintEnd_toStartOf="@+id/imageDelete"
            app:layout_constraintStart_toEndOf="@+id/phoneItem"
            app:layout_constraintTop_toTopOf="@+id/phoneItem" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageDelete"
            android:layout_width="@dimen/image_icon_layout"
            android:layout_height="@dimen/image_icon_layout"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageShare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageShare"
            app:layout_constraintTop_toTopOf="@+id/imageShare"
            app:srcCompat="@drawable/ic_delete"
            android:contentDescription="@string/cd_delete"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>